--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,157 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-up</title>
     <link rel="stylesheet" href="sign-up-style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #50c549;
+  background-image: url(https://c1.wallpaperflare.com/preview/857/663/627/hammer-court-law-judgment-penalty-fine.jpg);
+  background-repeat: repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.wrapper {
+    width: 400px;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.015);
+    backdrop-filter: blur(0px);
+    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.3);
+    border-radius: 15px;
+    background-color: rgba(0, 0, 0, 0.545);
+}
+
+form h2 {
+    color: #fff;
+    font-size: 28px;
+    font-weight: 600;
+    text-align: center;
+    letter-spacing: 0.8px;
+}
+
+.input-group {
+    position: relative;
+    margin: 35px auto 0;
+    width: 320px;
+}
+
+.input-group input {
+    font-size: 20px;
+    width: 100%;
+    border: none;
+    outline: none;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 500;
+    padding: 5px 0;
+    background-color: transparent;
+    border-bottom: 2px solid #fff;
+}
+
+.input-group .label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #fff;
+    transition: all 0.3s ease;
+    pointer-events: none;
+}
+
+.input-group input:focus~.label,
+.input-group input:valid~.label {
+    top: -20px;
+    font-size: 14px;
+    color: #efe9e9;
+}
+
+.check label {
+    margin: 20px 0;
+    font-size: 14px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    position: relative;
+    padding-left: 20px;
+}
+
+.check label input {
+    appearance: none;
+    position: absolute;
+    left: 0;
+}
+
+.check label input::before {
+    content: '';
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 15px;
+    width: 15px;
+    border-radius: 4px;
+    background: rgba(255, 255, 255, 0.015);
+    color: #fff;
+    top: 50%;
+    /* transform: translateY(-50%); */
+}
+
+.check label input:checked::before {
+    content: '\2714';
+    background: rgba(255, 255, 255, 0.15);
+}
+
+form button {
+    width: 100%;
+    border: none;
+    outline: none;
+    color: #fff;
+    background-color: rgba(255, 255, 255, 0.15);
+    border-radius: 5px;
+    padding: 12px;
+    font-size: 1rem;
+    font-weight: 400;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+form button:hover {
+    background-color: rgba(255, 255, 255, 0.25);
+}
+
+.signin {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.signin p {
+    color: #fff;
+    font-size: 14px;
+}
+
+.signin p a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.signin p a:hover {
+    opacity: 0.8;
+    transform: 0.3s;
+}
+    </style>
 </head>
 <body>
     <div class="wrapper">
